src/assets/css/tools.css
/* ... */
html[dir="rtl"] .tools-option-children > label::before {
  content: "┘";
  right: -15px;
  left: auto;
}

/* /////////////////////////////////////////////////////////////// */

#tools-menu-sticky-div {
  background-color: var(--tools-bg1-color);
  position: sticky;
  top: 0;
  left: 0;
}

#tools-menu-non-sticky-div {
  background-color: var(--tools-bg1-color);
}

.tools-menu-buttons {
  padding: 30px;
}
.tools-menu-buttons i {
  margin-right: 5px;
}

/* /////////////////////////////////////////////////////////////// */

#tools-title {
  text-align: end;
  width: 100%;
  font-size: 20px;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 25px;
}

#tools-title span {
  background-color: var(--tools-bg1-color);
  padding: 10px;
  /* border-right: 2px solid var(--tools-input-border-color); */
}

/* /////////////////////////////////////////////////////////////// */

@media (max-width: 1200px) {
  #tools-columns {
    display: relative;
    top: 0;
    left: 0;
    width: 100%;
  }

  #tools-columns-left {
    position: relative;
    top: 0;
    left: 0;
    width: 250px;
    min-width: 250px;
  }

  #tools-columns-right {
    width: 100%;
    position: relative;
    top: 0;
    left: 250;
  }
}

/* /////////////////////////////////////////////////////////////// */

.tools-disabled {
  pointer-events: none;
  cursor: default;
  filter: opacity(0.2) grayscale(1);
}
.tools-disabled .tools-toggle-slider:before {
  opacity: 0;
}

.tools-read-only {
  filter: opacity(0.7) !important;
  cursor: default;
  pointer-events: none;
}

/* /////////////////////////////////////////////////////////////// */

#tools button {
  padding: 15px;
  border: none;
  background-color: var(--tools-button-normal-bg-color);
  color: var(--tools-button-normal-text-color);
  font-weight: 600;
  width: 100%;
  height: 100%;
  margin: 5px 0;
  border-radius: 3px;
}

#tools button:hover {
  background-color: var(--tools-button-normal-bg-hover-color);
  transform: scale(1.01);
  cursor: pointer;
}

#tools button:active {
  transform: translateY(1px);
}

/* .tools-button-accent {
  background-color: var(--tools-button-accent-bg-color) !important;
  color: var(--tools-button-accent-text-color) !important;
} */

html[dir="rtl"] .tools-button-accent i {
  transform: scale(-1, 1);
}

.tools-button-danger {
  background-color: var(--tools-button-danger-bg-color) !important;
  color: var(--tools-button-danger-text-color) !important;
}

.tools-input-label-button {
  padding: 0px !important;
  height: 35px !important;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 15px 0px 0px 0px !important;
}

/* /////////////////////////////////////////////////////////////// */

.tools-menu-buttons button:not(.tools-button-accent) {
  background-color: var(--tools-button-accent-bg-color) !important;
  color: var(--tools-button-accent-text-color) !important;
}

.tools-menu-button {
  padding: 10px 30px;
  margin-bottom: 10px;
  border: none;
  font-size: 16px;
  font-weight: 400;
  width: 100%;
  margin: 5px 0;
  cursor: pointer;
  display: flex;
  flex-direction: row;
  border-end-start-radius: 3px;
  border-start-start-radius: 3px;
  align-items: center;
}

.tools-menu-button-icon {
  /* padding-inline-end: 30px; */
  max-width: 0px;
  align-content: center;
  justify-content: center;
  min-width: 50px;
}

.tools-menu-button:hover {
  background-color: var(--tools-button-normal-bg-hover-color);
  color: var(--tools-button-normal-text-color);
  border-radius: 5px;
}
.tools-menu-button-selected {
  background-color: var(--tools-bg2-color);
  pointer-events: none;
  cursor: default;
}

.tools-menu-separator {
  border-top: 2px dashed var(--tools-bg2-color);
  margin-top: 10px;
  margin-bottom: 10px;
}

/* /////////////////////////////////////////////////////////////// */

#tools h3 {
  /* margin: 0 0 10px 0; */
  /* padding: 0 0 5px 0; */
  /* display: block; */
  /* width: 100%; */
  text-transform: uppercase;
  /* border-bottom: 1px solid var(--tools-text-color); */
  font-size: 14px;
  background-color: var(--tools-bg1-color);
  width: fit-content;
  padding: 10px;
  /* border-left: 1px solid var(--tools-input-border-color); */
  overflow-wrap: anywhere;
}

.tools-h3-extra-margin-top {
  margin-top: 20px !important;
}

.tools-h3-extra-margin-top-2 {
  margin-top: 30px !important;
}

.tools-h3-regular-caps {
  text-transform: none !important;
}

.tools-h3-no-border {
  border-bottom: 0px !important;
}

/* /////////////////////////////////////////////////////////////// */

#tools input[type="text"],
#tools input[type="number"] {
  width: 100%;
  height: 35px;
  padding: 5px;
  background-color: var(--tools-input-bg-color);
  color: var(--tools-input-text-color);
  border: 1px solid var(--tools-input-border-color);
  font-size: 13px;
  text-indent: 4px;
  user-select: text;
  overflow-wrap: anywhere;
}

#tools input[type="text"]::placeholder,
#tools input[type="number"]::placeholder {
  filter: opacity(0.6);
}

#tools input[type="color"] {
  width: 98%;
  height: 35px;
  padding: 0px;
  background-color: var(--tools-input-bg-color);
  color: var(--tools-input-text-color);
  border: 1px solid var(--tools-input-border-color);
}

#tools input[type="time"] {
  width: 98%;
  height: 35px;
  padding: 5px;
  background-color: var(--tools-input-bg-color);
  color: var(--tools-input-text-color);
  border: 1px solid var(--tools-input-border-color);
  position: relative;
}
#tools input[type="time"]::-webkit-calendar-picker-indicator {
  /* filter: invert(100%);
  opacity: 0.7;
  mix-blend-mode: difference; */
  /* make the time picker take the whole space for clicking and hide clock*/
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  padding: 0;
  color: transparent;
  background: transparent;
  cursor: pointer;
}
/* ... */

